# openeuler-virtCCA_sdk

./: .clang-format  .gitignore  README.en.md  README.md  build.sh  format-all.sh
KDC/: Cargo.toml
KDC/.cargo/: config.toml
KDC/common/: Cargo.toml
KDC/common/src/: lib.rs
KDC/conf/: common.json
KDC/conf/specs/: kdcagent.spec  kdcproxy.spec
KDC/kdc_agent/: Cargo.toml
KDC/kdc_agent/conf/: agent_conf.json  kdcagent_launcher.service
KDC/kdc_agent/src/: lib.rs  main.rs  process_manager.rs
KDC/kdc_proxy/: Cargo.toml
KDC/kdc_proxy/src/: http_client.rs  lib.rs
KDC/scripts/: build_rpm.sh
MPC/demo/psi/src/: CMakeLists.txt  TestMPCTee.cpp
MPC/kcal_python/: CMakeLists.txt  README.md  build_native.py  pyproject.toml
MPC/kcal_python/kcal/: __init__.py  kcal.pyi
MPC/kcal_python/src/: CMakeLists.txt  context_ext.cc  context_ext.h  kcal_wrapper.cc  kcal_wrapper.h
MPC/kcal_python/test/: __init__.py  arith_demo.py  demo.py  pir_demo.py  psi_demo.py  socket_util.py
MPC/middleware/: CMakeLists.txt
MPC/middleware/kcal/: CMakeLists.txt
MPC/middleware/kcal/api/: kcal_api.h
MPC/middleware/kcal/core/: arithmetic_initializer.cc  arithmetic_initializer.h  context.cc  context.h  mpc_operator_base.cc  mpc_operator_base.h  operator_base.cc  operator_base.h  operator_factory.cc  operator_factory.h  operator_manager.cc  operator_manager.h  operator_registry.cc  operator_registry.h  pir_initializer.cc  pir_initializer.h  psi_initializer.cc  psi_initializer.h  tee_ctx_initializer.h  tee_ctx_manager.cc  tee_ctx_manager.h
MPC/middleware/kcal/enumeration/: kcal_enum.h
MPC/middleware/kcal/operator/: all_operator_register.cc  all_operator_register.h  kcal_arithmetic.cc  kcal_arithmetic.h  kcal_avg.cc  kcal_avg.h  kcal_make_share.cc  kcal_make_share.h  kcal_maximum.cc  kcal_maximum.h  kcal_mpc_arithmetic.cc  kcal_mpc_arithmetic.h  kcal_pir.cc  kcal_pir.h  kcal_psi.cc  kcal_psi.h  kcal_reveal_share.cc  kcal_reveal_share.h  kcal_sum.cc  kcal_sum.h  mpc_operator_register.cc
MPC/middleware/kcal/utils/: io.cc  io.h  kv_store.cc  kv_store.h  node_info_helper.cc  node_info_helper.h
SR-IOV/: MLNX5-support-virtCCA-SRIOV.patch  NVMe-support-virtCCA-SRIOV.patch  SP680-support-virtCCA-SRIOV.patch  readme.md
attestation/rats-tls/: 0006-Resolving-IMA-Verification-Conflicts-in-UEFI-Mode.patch  0007-The-platform_token-verification-function-is-added-to.patch  0008-Fix-parse-pcr_index-and-log-format.patch
attestation/rim_ref/: CMakeLists.txt  README.md
attestation/rim_ref/inc/: cJSON.h  gen_dtb.h  gen_rim_ref.h
attestation/rim_ref/inc/qemu_generator/: Makefile  go.mod  go.sum
attestation/rim_ref/inc/qemu_generator/src/: main.go
attestation/rim_ref/inc/qemu_generator/src/qemu/: qemu.go
attestation/rim_ref/src/: cJSON.c  gen_dtb.c  gen_rim_ref.c
attestation/samples/: CMakeLists.txt
attestation/samples/include/: hash_defs.h  platform_verify.h  token_parse.h  token_validate.h
attestation/samples/src/: client.c  platform_verify.c  server.c  token_validate.c
cvm-image-rewriter/: README.en.md  README.md  create-oe-image.sh
image_key/sdk/: CMakeLists.txt
image_key/sdk/inc/: image_key.h
image_key/sdk/src/: image_key.c
kata-cc0.8.0/: attestation-service.patch  guest-components.patch  image-ima-measurement.patch  kata-container.patch  kbs-types.patch  qemu.patch  trustee.patch
kata-v3.15.0/: guest-components-virtcca-dim.patch  guest-components.patch  kata-containers.patch  kata-deploy.patch  kbs-types.patch  trustee-virtcca-dim.patch  trustee.patch
kata-v3.15.0/conf/: Dockerfile  hosts  pcipc-nic.json  pcipc-nvme-hook.sh  pcipc-nvme.json  rootCA.crt  virtcca-kata-deploy.yaml  virtcca.config
kata-v3.15.0/doc/: kata-deploy自动化部署.md  kata机密容器.md  virtCCA机密虚机支持DIM动态度量指导-20251127.md  容器化编译CoCo组件.md  容器镜像加解密.md  容器镜像签名验签.md  机密容器支持SRIOV.md  机密容器远程证明环境部署.md  机密容器配置nydus.md  部署containerd并初始化k8s集群.md
kata-v3.15.0/tools/: README.md  add_network_proxy.patch  build.sh  deploy_proxy_certs.sh  kube-flannel.yaml  update_kubeadm_init.sh
migcvm-agent/: CMakeLists.txt  README.md  build.sh  migvm_agent.c
migcvm-agent/debug/: socket-send.c  socket-tool.c  tsi-controller.c  tsi-test.c
migcvm-agent/inc/: config.h  event_log.h  firmware_state.h  ima_measure.h  platform_verify.h  rem.h
migcvm-agent/inc/attest/: binary_blob.h  common.h  config.h  event_log.h  firmware_state.h  hash_defs.h  ima_measure.h  platform_verify.h  rem.h  token_parse.h  token_validate.h  utils.h  verify.h
migcvm-agent/inc/integrity_check/: integrity_check_handler.h
migcvm-agent/inc/migcvm_tsi/: migcvm_tsi.h
migcvm-agent/inc/rats_tls_handler/: rats_tls_handler.h
migcvm-agent/inc/socket/: host_server_ip.h  socket_agent.h
migcvm-agent/migcvm_tsi/: migcvm_tsi.c  migcvm_tsi.h
migcvm-agent/socket_agent/: host_socket_agent.c  socket_agent.h
migcvm-agent/src/: ima_measure.c  migcvm-agent.c  platform_verify.c  rats-mig-agent.c  rem.c  token_parse.c  utils.c  verify.c
migcvm-agent/src/attest/: CMakeLists.txt  binary_blob.c  config.c  event_log.c  firmware_state.c  ima_measure.c  platform_verify.c  rem.c  token_parse.c  token_validate.c  utils.c  verify.c
migcvm-agent/src/integrity_check/: integrity_check_handler.c
migcvm-agent/src/migcvm_tsi/: CMakeLists.txt  migcvm_tsi.c  tsi_handler.c
migcvm-agent/src/rats_tls_handler/: rats_tls_handler.c
migcvm-agent/src/socket/: host_server_ip.c  host_socket_agent.c
virtcca-mig-agent/: Makefile  README.md
virtcca-mig-agent/include/: integrity_check_handler.h  mig_thread.h  tls_core.h  tmi.h
virtcca-mig-agent/src/: integrity_check_handler.c  main.c  mig_thread.c  tls_core.c  tmi.c
virtcca_deploy/: README.md  compute_config.py  manager_config.py  requirements.txt  setup.py
virtcca_deploy/conf/: cvm_template.xml  ifcfg-template  virtcca_deploy.conf
virtcca_deploy/scripts/: tmm_cvm_env_setup.sh
virtcca_deploy/tests/: conftest.py  test_auth_middleware.py  test_auth_routes.py  test_auth_service.py  test_cli_tool.py  test_compute_deploy.py  test_deploy_single_vm.py  test_device_manager_allocator.py  test_manager_api.py  test_network_config_service.py  (+8 more)
(+69 files in other folders)
