[package]
name = "kdc_agent"
version.workspace = true
edition.workspace = true

[lib]
name = "kdc_agent"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kdc_agent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
openssl.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
log4rs.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tower.workspace = true
tower-http.workspace = true
libloading.workspace = true
uuid.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
base64.workspace = true
token_verifier.workspace = true

[lints]
workspace = true
