[package]
name = "kdc_proxy"
version.workspace = true
edition.workspace = true

[lib]
name = "kdc_proxy"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
openssl.workspace = true
thiserror.workspace = true
log.workspace = true
reqwest.workspace = true
uuid.workspace = true
base64.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
